# market-simulator

./: Cargo.toml  Readme.md  Rocket.toml  orderbook.json
fix/: Cargo.toml
fix/src/: main.rs
matching_engine/: Cargo.toml  README.md
matching_engine/src/: lib.rs  main.rs  model.rs
matching_engine/src/common/: utils.rs
matching_engine/src/matchers/: fifo_matcher.rs  prorata_matcher.rs
matching_engine/src/model/: domain.rs
matching_engine/test_data/: orders.txt
matching_engine/tests/: fifo_matcher_tests.rs  pro_rata_matcher_tests.rs
sim/: Cargo.toml
sim/src/: formatters.rs  lib.rs  main.rs  main.rs.cli  matchers.rs
sim/src/common/: utils.rs
sim/src/formatters/: formatter.rs  json_formatter.rs
sim/src/matchers/: fifo_matcher.rs  matcher.rs  prorata_matcher.rs
sim/src/model/: domain.rs
sim/test_data/: orders.txt  test1.txt
sim/tests/: fifo_matcher_tests.rs  pro_rata_matcher_tests.rs
static/: index.html
web/: Cargo.toml
web/src/: lib.rs  main.rs
web/static/: file_upload.html
web/test_data/: ob.json  orders.txt
