[package]
name = "matching_engine"
version = "0.1.7"
authors = ["Sundar Krishnamachari <tksrajan@gmail.com>"]
edition = "2021"
rust-version = "1.71.0"
readme = "README.md"
repository = "https://github.com/tksundar/market-simulator"
license = "MIT OR Apache-2.0"
keywords = ["finance" , "fintech" ,"market_simulator","exchange_simulator" ]
description = "A matching engine that matches orders using FIFO or Prorata matching algoritm.Refer https://corporatefinanceinstitute.com/resources/career-map/sell-side/capital-markets/matching-orders/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10.0"
rand = "0.8.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.10"
colored = "2.0"
chrono = "0.4"

